<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layouts"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Titles"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/Menus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Menus"/>
        <Button
            android:id="@+id/external_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/external_link"/>
        <Button
            android:id="@+id/zoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoo"/>
        <Button
            android:id="@+id/EggTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EggTimer"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>